Fixed a footer placement problem
The footer was not showing propperly when it has space to do so

--- a/src/app/views/login/login.css
+++ b/src/app/views/login/login.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
 }
 
 .container {
